<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hussein.com.swype.app.Gallery"
    tools:showIn="@layout/activity_configure_images">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_images"
        android:id="@+id/imageSelect"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />




    <GridView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/imageGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnWidth="90dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:stretchMode="columnWidth"
        android:gravity="center"
        android:layout_below="@+id/doneSave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:id="@+id/doneSave"
        android:layout_gravity="bottom"
        android:layout_below="@+id/imageSelect"
        android:layout_alignRight="@+id/imageGrid"
        android:layout_alignEnd="@+id/imageGrid"
        android:layout_marginRight="94dp"
        android:layout_marginEnd="94dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moreinfo"
        android:text="@string/mi"
        android:layout_gravity="bottom"
        android:layout_above="@+id/imageGrid"
        android:layout_toLeftOf="@+id/doneSave"
        android:layout_toStartOf="@+id/doneSave" />


</RelativeLayout>
